# 90-days-ML-Challenge

CNN Architectures/: Day1.ipynb
CNN Architectures/.ipynb_checkpoints/: Day3-checkpoint.ipynb
Classical ML and Maths/: Day 1.ipynb  Day 3.ipynb  Day 4.ipynb  Day 5.ipynb  Day 6.ipynb  README.md
Deep Learning Foundation/: Day 2.ipynb  Day 3.ipynb
Deep Learning Foundation/.ipynb_checkpoints/: Day 1-checkpoint.ipynb
Python-Basic-to-Advance/: Day1.ipynb  Day2.ipynb
Python-Basic-to-Advance/Day-3/: Day 3.ipynb  Sam.txt  Sambridhi.txt
Python-Basic-to-Advance/Day-4/: Day 4.ipynb
Python-Basic-to-Advance/Day-5/: Day 5.ipynb  black.py  gil_demo.py  isort.py  pyproject.toml  setup.py
main/: Day1.ipynb  Day2.ipynb
