[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
description = "My example package built with pyproject.toml"
authors = [
    { name = "Sambridhi", email = "sam7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    # Example: "requests>=2.25.1"
]

[project.urls]
Homepage = "https://your-homepage.example.com"
